<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sotayquanly">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thuchi"
                android:textColor="@color/colorAccent"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_tienthu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/icon_thutien_100"
                android:text="@string/tienthu"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_tienchi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon_chitien_100_100"
                android:text="@string/tienchi"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnThongKe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/icon_thongke_100"
                android:text="@string/thongke"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>